--- a/index.html
+++ b/index.html
@@ -8,27 +8,33 @@
   
   <title>Frontend Mentor | Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="./assets/css/main.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+  <main>
+    <section class="card">
+      <img class="avatar" src="./assets/images/avatar-jessica.jpeg" alt="avatar">
+      <h1>Jessica Randall</h1>
+      <h2>London, United Kingdom</h2>
+      <h3>"Front-end developer and avid reader."</h3>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+      <ul class="list-links">
+        <li class="links-item">GitHub</li>
+        <li class="links-item">Frontend Mentor</li>
+        <li class="links-item">LinkedIn</li>
+        <li class="links-item">Twitter</li>
+        <li class="links-item">Instagram</li>
+      </ul>
+    </section>
+  </main>
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </footer>
 </body>
 </html>
