--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
 
   <footer>
     <div class="attribution">
+     <h1 class="footer-attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+     </h1>
+
+     <h1 class="footer-attribution">
       Coded by <a href="#">Your Name Here</a>.
+     </h1>
     </div>
   </footer>
 </body>
