--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
      </h1>
 
      <h1 class="footer-attribution">
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/MitziR02" target="_blank">Mitzi R</a>.
      </h1>
     </div>
   </footer>
